<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:outlineAmbientShadowColor="#4CAF50"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:gravity="center"
        android:orientation="vertical"
        android:outlineAmbientShadowColor="#4CAF50"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/androidLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:adjustViewBounds="false"
            android:background="#2B2D30"
            android:contentDescription="@string/logo"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            android:src="@drawable/android_logo"
            tools:layout_gravity="center" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/adriantalavera"
            android:textColor="@color/black"
            android:textSize="38sp"
            android:textStyle="bold"
            tools:layout_gravity="center" />

        <TextView
            android:id="@+id/profession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android_developer"
            android:textColor="#65AF0B"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:orientation="vertical"
        android:outlineAmbientShadowColor="#4CAF50"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/icon_phone"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/icono_de_telefono"
                android:src="@drawable/baseline_phone_24" />

            <TextView
                android:id="@+id/texto_telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/_11_123_444_555_666"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/icon_share"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/icono_share"
                android:src="@drawable/baseline_share_24" />

            <TextView
                android:id="@+id/texto_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/github_adritn"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/icon_email"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/icono_email"
                android:src="@drawable/baseline_email_24" />

            <TextView
                android:id="@+id/texto_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_gmail_com"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
